# VgmWebsite

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  ANALYSIS.md  DEPLOYMENT_COMPLETE.md  Dockerfile  Dockerfile.backend  README.md  TODO.md  admin_cookies.txt  alembic.ini  analyze_architecture.py  api_schema.py  app.py  app_backup.py  app_new.py  app_old.py  backend_clean.py  cache_service.py  commands.py  cookies.txt  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  env.example  extensions.py  forms.py  logging_config.py  main.py  messages.pot  migrate.py  models.py  models_new.py  monitoring-dashboard.html  openapi.json  openapi3.json  package.json  pyproject.toml  railway.toml  (+9 more)
accounts/: models.py
alembic/: env.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-class-replit-ui-theme-root-notranslate-translate-no-style-web-1740570155863.txt  Pasted--De-Meest-Professioneel-Voelende-en-Best-Ontworpen-Websites-van-2025-Een-Diepgaande-Analyse-In--1740345276914.txt  Pasted--Technische-en-Visuele-Samenwerking-tussen-Programmeurs-en-Webdesigners-voor-Optimale-Website-Ervar-1740344568252.txt  Pasted--VGM-Iftar-Systeem-Oplossingsplan-1-Oplossing-voor-Dubbele-Iftar-Events-Probleem-Incor-1740693501404.txt  Pasted--app-js-Hoofdbestand-voor-de-iftar-kaart-applicatie-const-express-require-express-const-sq-1740701883990.txt  Pasted-A-Replit-Ik-zie-dat-we-de-stapsgewijze-aanpak-uit-het-document-nog-niet-volledig-hebben-gevolgd-La-1740701874722.txt  Pasted-AttributeError-AttributeError-User-object-has-no-attribute-mosque-preferences-Traceback-most--1740493695480.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-events-update-n-1740406151199.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-main-add-iftar--1740529947051.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-main-add-iftar--1740530130431.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-main-edit-mosqu-1740765199566.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-main-iftar-map--1740529650590.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-main-iftar-map-1740570387786.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-main-index-Di-1740826051646.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-main-manage-boa-1740764487282.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-main-profile--1740405545595.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-main-ramadan--1740529483964.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-ramadan-add-ift-1740826927611.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-ramadan-edit-i-1740559951386.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-ramadan-quran-r-1740529802803.txt  (+64 more)
config/: rbac.config.yaml
database/: README.md  config.py  (+1 more)
(+272 files in other folders)
